Internships are done.

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         </div>
         <div class="meta">May 2019 — August 2019</div>
         <ul class="bullets">
-          <li>Designed and implemented a <span class="hl">messaging protocol and a comprehensive debug toolset</span> for the <span class="hl">next‑generation HoloLens display firmware</span>. Experienced working in a distributed software team, including code review, branching strategies, and Git.</li>
-          <li>Extended a <span class="hl">complex C DLL library</span> to integrate a <span class="hl">new data pipe</span> between host PCs and the HoloLens display control module (with deep understanding of the existing API internals), to significantly streamline the real‑time debugging workflows.</li>
-          <li>Implemented a <span class="hl">message handler task in C++</span> and integrated the new task into the complex real‑time display firmware architecture with <span class="hl">well‑optimized inter‑task synchronization</span> (leveraging <span class="hl">advanced XOS RTOS APIs</span> on <span class="hl">multi‑core Xtensa LX7</span>).</li>
-          <li>Designed a <span class="hl">modular/scalable GUI‑based Python application</span>, including various features (control, data visualization, parameter configuration, etc.), to debug the firmware using the created <span class="hl">data pipe API</span> (called as a C dll library).</li>
+          <li>Designed and implemented a <span class="hl">messaging protocol and a comprehensive debug toolset</span> for the <span class="hl">next-generation HoloLens display firmware</span>. Experienced working in a distributed software team, including code review, branching strategies, and Git.</li>
+          <li>Extended a complex C DLL library to integrate a new data pipe between host PCs and the HoloLens display control module (with deep understanding of the existing API internals), to significantly streamline the real-time debugging workflows.</li>
+          <li>Implemented a <span class="hl">message handler</span> task <span class="hl">in C++</span> and integrated the new task into the complex real-time display firmware architecture with <span class="hl">well-optimized inter-task synchronization (leveraging advanced XOS RTOS APIs on multi-core Xtensa LX7)</span>.</li>
+          <li><span class="hl">Designed a modular/scalable GUI-based Python application</span>, including various features (control, data visualization, parameter configuration, etc.) to debug the firmware using the created data pipe API (called as a C dll library).</li>
         </ul>
       </div>
 
@@ -152,9 +152,9 @@
         </div>
         <div class="meta">February 2019 — May 2019</div>
         <ul class="bullets">
-          <li><span class="hl">Developed and demonstrated the first 3D holographic MIMO‑SAR imager prototype in the literature</span>, utilizing TI's 4‑chip cascaded (192 elements) mmWave radar board and a custom‑built two‑axis scanner (optimized to operate at 400mm/s).</li>
-          <li>Leveraged the comprehensive <strong>Matlab‑based signal processing toolbox</strong> (originally developed for single‑chip sensors) for the 4‑chip cascaded sensors (with enhanced real‑time data capture, near‑field calibration, and advanced image reconstruction modules) and created the <strong>first real 3D holographic SAR images in the market</strong>. The developed solution (testbed design, software tools, algorithms, etc.) is being used by many customers and researchers worldwide.</li>
-          <li>Proposed a new <strong>4‑chip cascaded antenna layout</strong> design optimized for near‑field applications. <span class="hl">Developed a novel algorithm to enable real‑world high‑resolution radar imaging with large MIMO apertures in near‑range</span>. Characterized the system performance in different aspects with real measurements and simulations.</li>
+          <li><span class="hl">Developed and demonstrated the first 3D holographic MIMO-SAR imager prototype in the literature</span>, utilizing TI's 4-chip cascaded (192 elements) mmWave radar board and a custom-built two-axis scanner (optimized to operate at 400mm/s).</li>
+          <li>Leveraged the comprehensive Matlab-based signal processing toolbox (which he originally developed for single-chip sensors) for the 4-chip cascaded sensors (with enhanced real-time data capture, near-field calibration, and advanced image reconstruction modules) and created the first real 3D holographic SAR images in the market. <span class="hl">The developed solution (testbed design, software tools, algorithms, etc.) is being used by many customers and researchers worldwide</span>.</li>
+          <li>Proposed a new 4-chip cascaded antenna layout design optimized for near-field applications. <span class="hl">Developed a novel algorithm to enable real-world high-resolution radar imaging with large MIMO apertures in near-range</span>. Characterized the system performance in different aspects with real measurements and simulations.</li>
         </ul>
       </div>
 
